--- a/src/Pages/AddPage/AddPage.css
+++ b/src/Pages/AddPage/AddPage.css
@@ -5,8 +5,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #1f2128;
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
+    height: 80vh;
+    width: 70vw;
 }
 
 .add-page-wrapper{
@@ -104,5 +106,9 @@
     .add-page{
         width: 96%;
         height: 80%;
+    }
+    .add-page-main-wrapper{
+        height: 100%;
+        width: 100%;
     }
 }
