--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -216,6 +216,7 @@ nav{
     align-items: center;
     opacity: 1;
     box-shadow:0px 0px 10px 10px  #00000046;
+    cursor: pointer;
 }
 
 @media only screen and (max-width: 1200px){
